--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Vincent Lemeunier",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "0.22.0",
     "couchbase": "2.3.0",
     "dataloader": "1.3.0",
     "express": "4.15.2",
