--- a/web-app/package.json
+++ b/web-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "material-ui": "0.17.1",
+    "query-string": "4.3.2",
     "react": "^15.4.2",
     "react-apollo": "1.0.0",
     "react-dom": "^15.4.2",
