--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dataloader": "1.3.0",
     "express": "4.15.2",
     "express-graphql": "0.6.3",
+    "got": "6.7.1",
     "graphql": "0.9.1",
     "graphql-tools": "0.10.1",
     "jsdom": "9.12.0",
