--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "graphql": "0.9.1",
     "graphql-tools": "0.10.1",
     "jsdom": "9.12.0",
+    "mime-types": "2.1.15",
     "node-uuid": "1.4.8",
     "readability": "git+https://github.com/mozilla/readability.git"
   },
