--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,10 @@
     "graphql-tools": "0.10.1",
     "jsdom": "9.12.0",
     "mime-types": "2.1.15",
+    "morgan": "1.8.1",
     "node-uuid": "1.4.8",
-    "readability": "git+https://github.com/mozilla/readability.git"
+    "readability": "git+https://github.com/mozilla/readability.git",
+    "winston": "2.3.1"
   },
   "devDependencies": {
     "babel-eslint": "7.2.2",
