--- a/server/package.json
+++ b/server/package.json
@@ -13,15 +13,19 @@
   "author": "Vincent Lemeunier",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.17.1",
     "cheerio": "0.22.0",
     "couchbase": "2.3.0",
     "dataloader": "1.3.0",
+    "dotenv": "4.0.0",
     "express": "4.15.2",
     "express-graphql": "0.6.3",
+    "googleapis": "19.0.0",
     "got": "6.7.1",
     "graphql": "0.9.1",
     "graphql-tools": "0.10.1",
     "jsdom": "9.12.0",
+    "jsonwebtoken": "7.3.0",
     "mime-types": "2.1.15",
     "morgan": "1.8.1",
     "node-uuid": "1.4.8",
