--- a/web-app/package.json
+++ b/web-app/package.json
@@ -8,6 +8,7 @@
     "react": "^15.4.2",
     "react-apollo": "1.0.0",
     "react-dom": "^15.4.2",
+    "react-google-login": "2.8.5",
     "react-router-dom": "4.0.0",
     "react-tap-event-plugin": "2.0.1"
   },
