--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,10 @@
     "dataloader": "1.3.0",
     "dotenv": "4.0.0",
     "express": "4.15.2",
-    "express-graphql": "0.6.3",
     "googleapis": "19.0.0",
     "got": "6.7.1",
     "graphql": "0.9.1",
+    "graphql-server-express": "0.7.1",
     "graphql-tools": "0.10.1",
     "jsdom": "9.12.0",
     "jsonwebtoken": "7.3.0",
