--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "body-parser": "1.17.1",
     "cheerio": "0.22.0",
+    "cookie": "0.3.1",
     "couchbase": "2.3.0",
     "dataloader": "1.3.0",
+    "date-fns": "1.28.3",
     "dotenv": "4.0.0",
     "express": "4.15.2",
+    "get-stream": "3.0.0",
     "googleapis": "19.0.0",
     "got": "6.7.1",
     "graphql": "0.9.1",
