--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,24 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "material-ui": "0.17.1",
+    "prop-types": "15.5.8",
     "query-string": "4.3.2",
-    "react": "^15.4.2",
-    "react-apollo": "1.0.0",
-    "react-dom": "^15.4.2",
+    "react": "15.5.4",
+    "react-apollo": "1.1.2",
+    "react-dom": "15.5.4",
     "react-google-login": "2.8.5",
-    "react-router-dom": "4.0.0",
-    "react-tap-event-plugin": "2.0.1",
+    "react-icons": "2.2.3",
+    "react-router-dom": "4.1.1",
     "styled-components": "1.4.5"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "source-map-explorer": "1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyse": "source-map-explorer build/static/js/main.*"
   },
   "proxy": "http://localhost:4001"
 }
