--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "15.5.8",
+    "prop-types": "^15.5.0",
     "query-string": "4.3.2",
     "react": "15.5.4",
     "react-apollo": "1.1.2",
     "react-dom": "15.5.4",
-    "react-google-login": "2.8.5",
+    "react-google-login": "git://github.com/kombucha/react-google-login.git#update-to-latest-react",
     "react-icons": "2.2.3",
     "react-router-dom": "4.1.1",
     "styled-components": "1.4.5"
