--- a/web-app/package.json
+++ b/web-app/package.json
@@ -14,6 +14,8 @@
     "styled-components": "1.4.5"
   },
   "devDependencies": {
+    "@kadira/react-storybook-addon-info": "3.4.0",
+    "@kadira/storybook": "2.21.0",
     "react-scripts": "0.9.5",
     "source-map-explorer": "1.3.3"
   },
@@ -22,7 +24,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "analyse": "source-map-explorer build/static/js/main.*"
+    "analyse": "source-map-explorer build/static/js/main.*",
+    "storybook": "start-storybook -p 9009 -s public --dont-track",
+    "build-storybook": "build-storybook -s public --dont-track"
   },
   "proxy": "http://localhost:4001"
 }
