[Whatevs] Coverage, stories, bug fixes

--- a/web-app/package.json
+++ b/web-app/package.json
@@ -23,6 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom='[\"src/**/*.js\",\"!src/**/*.stories.js\"]'",
     "eject": "react-scripts eject",
     "analyse": "source-map-explorer build/static/js/main.*",
     "storybook": "start-storybook -p 9009 -s public --dont-track",
