--- a/web-app/package.json
+++ b/web-app/package.json
@@ -23,11 +23,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom='[\"src/**/*.js\",\"!src/**/*.stories.js\"]'",
+    "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom='[\"src/**/*.js\",\"!src/**/*.stories.js\"]' --coverageReporters='[\"json\", \"html\", \"text\"]'",
     "eject": "react-scripts eject",
     "analyse": "source-map-explorer build/static/js/main.*",
     "storybook": "start-storybook -p 9009 -s public --dont-track",
-    "build-storybook": "build-storybook -s public --dont-track"
+    "build-storybook": "build-storybook -s public"
   },
   "proxy": "http://localhost:4001"
 }
