[Feature] Batch add & pocket import (wip)

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "Vincent Lemeunier",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "body-parser": "1.17.1",
     "cheerio": "0.22.0",
     "cookie": "0.3.1",
