--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "body-parser": "1.17.1",
     "cheerio": "0.22.0",
     "cookie": "0.3.1",
+    "cors": "^2.8.3",
     "dataloader": "1.3.0",
     "date-fns": "1.28.3",
     "dotenv": "4.0.0",
