--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "^15.5.0",
+    "prop-types": "15.5.7",
     "query-string": "4.3.2",
     "react": "15.5.4",
     "react-apollo": "1.1.2",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "3.4.0",
     "@kadira/storybook": "2.21.0",
-    "react-scripts": "0.9.5",
+    "react-scripts": "1.0.1",
     "source-map-explorer": "1.3.3"
   },
   "scripts": {
