--- a/web-app/package.json
+++ b/web-app/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "prop-types": "15.5.7",
-    "query-string": "4.3.2",
+    "polished": "1.1.2",
+    "prop-types": "15.5.10",
+    "query-string": "^4.3.4",
     "react": "15.5.4",
-    "react-apollo": "1.1.2",
+    "react-apollo": "^1.2.0",
     "react-dom": "15.5.4",
     "react-google-login": "git://github.com/kombucha/react-google-login.git#update-to-latest-react",
-    "react-icons": "2.2.3",
+    "react-icons": "^2.2.5",
     "react-router-dom": "4.1.1",
     "styled-components": "2.0.0-17"
   },
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "3.4.0",
-    "@kadira/storybook": "2.21.0",
+    "@kadira/storybook": "^2.35.3",
     "react-scripts": "1.0.1",
     "source-map-explorer": "1.3.3"
   },
