Basic feed processing functionality

--- a/server/package.json
+++ b/server/package.json
@@ -22,9 +22,10 @@
     "date-fns": "1.28.3",
     "dotenv": "4.0.0",
     "express": "4.15.2",
+    "feedparser": "^2.2.0",
     "get-stream": "3.0.0",
     "googleapis": "19.0.0",
-    "got": "6.7.1",
+    "got": "^6.7.1",
     "graphql": "0.9.1",
     "graphql-server-express": "0.7.1",
     "graphql-tools": "0.10.1",
@@ -34,6 +35,7 @@
     "morgan": "1.8.1",
     "node-uuid": "1.4.8",
     "pg": "^6.1.5",
+    "pump": "^1.0.2",
     "readability": "git+https://github.com/mozilla/readability.git",
     "winston": "2.3.1"
   },
