--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "format": "prettier --print-width=100 --write --jsx-bracket-same-line=true 'packages/*/*.js' 'packages/*/!(node_modules)/**/*.js'",
     "precommit": "lint-staged"
   },
   "devDependencies": {
@@ -14,7 +15,7 @@
   },
   "lint-staged": {
     "*.js": [
-      "prettier --write",
+      "prettier --print-width=100 --jsx-bracket-same-line=true --write",
       "git add"
     ]
   }
