--- a/packages/nomnom-client-web/package.json
+++ b/packages/nomnom-client-web/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "3.4.0",
-    "@kadira/storybook": "^2.35.3",
+    "@storybook/react": "3.0.0-alpha.3",
     "react-scripts": "1.0.3",
     "source-map-explorer": "1.3.3"
   },
@@ -28,7 +28,7 @@
     "coverage": "react-scripts test --env=jsdom --coverage --collectCoverageFrom='[\"src/**/*.js\",\"!src/**/*.stories.js\"]' --coverageReporters='[\"json\", \"html\", \"text\"]'",
     "eject": "react-scripts eject",
     "analyse": "source-map-explorer build/static/js/main.*",
-    "storybook": "start-storybook -p 9009 -s public --dont-track",
+    "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
   "proxy": "http://localhost:4001"
