--- a/packages/nomnom-server-jobs/package.json
+++ b/packages/nomnom-server-jobs/package.json
@@ -5,7 +5,11 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "bluebird": "^3.5.0",
     "express": "4.15.3",
-    "nomnom-server-core": "^1.0.0"
+    "feedparser": "^2.2.0",
+    "got": "^6.7.1",
+    "nomnom-server-core": "^1.0.0",
+    "pump": "^1.0.2"
   }
 }
