--- a/packages/nomnom-client-web/package.json
+++ b/packages/nomnom-client-web/package.json
@@ -13,12 +13,12 @@
     "react-icons": "^2.2.5",
     "react-router-dom": "4.1.1",
     "react-virtualized": "^9.7.6",
-    "styled-components": "2.0.0-19"
+    "styled-components": "2.0.0"
   },
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "3.4.0",
     "@storybook/react": "3.0.0-alpha.3",
-    "react-scripts": "1.0.3",
+    "react-scripts": "1.0.6",
     "source-map-explorer": "1.3.3"
   },
   "scripts": {
