--- a/packages/nomnom-client-web/package.json
+++ b/packages/nomnom-client-web/package.json
@@ -5,20 +5,21 @@
   "dependencies": {
     "polished": "1.1.2",
     "prop-types": "15.5.10",
-    "query-string": "^4.3.4",
+    "query-string": "4.3.4",
     "react": "15.5.4",
-    "react-apollo": "^1.2.0",
+    "react-apollo": "1.2.0",
     "react-dom": "15.5.4",
     "react-google-login": "git://github.com/kombucha/react-google-login.git#update-to-latest-react",
-    "react-icons": "^2.2.5",
+    "react-icons": "2.2.5",
     "react-router-dom": "4.1.1",
-    "react-virtualized": "^9.7.6",
+    "react-virtualized": "9.7.6",
+    "recompose": "0.23.4",
     "styled-components": "2.0.0"
   },
   "devDependencies": {
     "@kadira/react-storybook-addon-info": "3.4.0",
-    "@storybook/react": "3.0.0-alpha.3",
-    "react-scripts": "1.0.6",
+    "@storybook/react": "3.0.0",
+    "react-scripts": "1.0.7",
     "source-map-explorer": "1.3.3"
   },
   "scripts": {
