--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lerna": "^2.0.0-rc.4",
     "lint-staged": "^3.4.2",
     "nodemon": "1.11.0",
-    "prettier": "^1.3.1"
+    "prettier": "1.4.0"
   },
   "lint-staged": {
     "*.js": [
