--- a/packages/nomnom-client-web/package.json
+++ b/packages/nomnom-client-web/package.json
@@ -12,6 +12,7 @@
     "react-google-login": "git://github.com/kombucha/react-google-login.git#update-to-latest-react",
     "react-icons": "2.2.5",
     "react-router-dom": "4.1.1",
+    "react-transition-group": "1.1.3",
     "react-virtualized": "9.7.6",
     "recompose": "0.23.4",
     "styled-components": "2.0.0"
