--- a/packages/nomnom-client-web/package.json
+++ b/packages/nomnom-client-web/package.json
@@ -18,8 +18,8 @@
     "styled-components": "2.0.1"
   },
   "devDependencies": {
-    "@kadira/react-storybook-addon-info": "3.4.0",
-    "@storybook/react": "3.0.1",
+    "@storybook/addon-info": "3.1.3",
+    "@storybook/react": "3.1.3",
     "react-scripts": "1.0.7",
     "source-map-explorer": "1.3.3"
   },
