--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
-  "lerna": "2.0.0-rc.4",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "1.0.0"
+  "lerna": "2.0.0-rc.5",
+  "packages": ["packages/*"],
+  "version": "1.0.0",
+  "npmClient": "node_modules/.bin/npm"
 }
