--- a/packages/nomnom-client-web/package.json
+++ b/packages/nomnom-client-web/package.json
@@ -3,24 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "polished": "1.1.3",
+    "nomnom-components": "1.0",
+    "polished": "1.2.1",
     "prop-types": "15.5.10",
     "query-string": "4.3.4",
-    "react": "15.5.4",
+    "react": "15.6.1",
     "react-apollo": "1.4.2",
-    "react-dom": "15.5.4",
-    "react-google-login": "git://github.com/kombucha/react-google-login.git#update-to-latest-react",
+    "react-dom": "15.6.1",
+    "react-google-login": "2.9.2",
     "react-icons": "2.2.5",
     "react-router-dom": "4.1.1",
-    "react-transition-group": "1.1.3",
-    "react-virtualized": "9.7.6",
+    "react-transition-group": "1.2.0",
+    "react-virtualized": "9.8.0",
     "recompose": "0.23.5",
-    "styled-components": "2.0.1"
+    "styled-components": "2.1.0"
   },
   "devDependencies": {
-    "@storybook/addon-info": "3.1.3",
-    "@storybook/react": "3.1.3",
-    "react-scripts": "1.0.7",
+    "@storybook/addon-info": "3.1.6",
+    "@storybook/react": "3.1.7",
+    "react-scripts": "1.0.10",
     "source-map-explorer": "1.3.3"
   },
   "scripts": {
