--- a/packages/nomnom-server-api/package.json
+++ b/packages/nomnom-server-api/package.json
@@ -12,9 +12,9 @@
   "author": "Vincent Lemeunier",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "bluebird": "3.5.0",
     "body-parser": "1.17.2",
-    "cors": "^2.8.3",
+    "cors": "2.8.3",
     "dataloader": "1.3.0",
     "dotenv": "4.0.0",
     "express": "4.15.3",
@@ -23,7 +23,7 @@
     "graphql-server-express": "0.8.0",
     "graphql-tools": "1.0.0",
     "morgan": "1.8.2",
-    "nomnom-server-core": "^1.0.0"
+    "nomnom-server-core": "1.0.0"
   },
   "devDependencies": {
     "pkg": "4.0.0"
