--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "devDependencies": {
     "babel-eslint": "^7.2.3",
     "eslint": "3.19.0",
-    "husky": "0.14.1",
-    "lerna": "2.0.0-rc.5",
-    "lint-staged": "4.0.0",
+    "husky": "0.14.3",
+    "lerna": "2.0.0",
+    "lint-staged": "4.0.2",
     "nodemon": "1.11.0",
-    "prettier": "1.5.2"
+    "prettier": "1.5.3"
   },
   "lint-staged": {
     "*.js": [
