--- a/packages/nomnom-server-api/package.json
+++ b/packages/nomnom-server-api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "start": "API_PORT=4001 nodemon index.js",
+    "start": "API_PORT=4001 nodemon --watch . --watch ./node_modules/nomnom-server-core index.js",
     "build": "pkg -t node8-alpine-x64 ./index.js -o build/nomnom-api",
     "clean": "rm -fr build/"
   },
@@ -14,18 +14,18 @@
   "dependencies": {
     "bluebird": "3.5.0",
     "body-parser": "1.17.2",
-    "cors": "2.8.3",
+    "cors": "2.8.4",
     "dataloader": "1.3.0",
     "dotenv": "4.0.0",
     "express": "4.15.3",
-    "googleapis": "19.0.0",
-    "graphql": "0.10.1",
-    "graphql-server-express": "0.8.0",
-    "graphql-tools": "1.0.0",
+    "googleapis": "20.1.0",
+    "graphql": "0.10.5",
+    "graphql-server-express": "1.0.5",
+    "graphql-tools": "1.1.0",
     "morgan": "1.8.2",
     "nomnom-server-core": "1.0.0"
   },
   "devDependencies": {
-    "pkg": "4.0.0"
+    "pkg": "4.2.2"
   }
 }
