--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -6,13 +6,13 @@
     "compression": "1.7.0",
     "cookie-parser": "1.4.3",
     "isomorphic-fetch": "2.2.1",
-    "next": "2.4.9",
+    "next": "3.0.3",
     "nomnom-server-core": "1.0.0",
     "polished": "1.3.0",
     "prop-types": "15.5.10",
     "query-string": "5.0.0",
     "react": "15.6.1",
-    "react-apollo": "1.4.10",
+    "react-apollo": "1.4.11",
     "react-dom": "15.6.1",
     "react-google-login": "2.9.3",
     "react-icons": "2.2.5",
@@ -24,7 +24,14 @@
   "devDependencies": {
     "@storybook/addon-info": "3.2.0",
     "@storybook/react": "3.2.3",
+    "babel-eslint": "7.2.3",
     "babel-plugin-styled-components": "1.1.7",
+    "eslint": "3.19.0",
+    "eslint-config-react-app": "2.0.0",
+    "eslint-plugin-flowtype": "2.33.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "5.0.1",
+    "eslint-plugin-react": "7.0.1",
     "pkg": "4.2.2"
   },
   "scripts": {
