--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "nomnom",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "format": "prettier --print-width=100 --write --jsx-bracket-same-line=true 'packages/*/*.js' 'packages/*/!(node_modules)/**/*.js'",
@@ -8,17 +10,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
-    "eslint": "3.19.0",
+    "eslint": "4.5.0",
     "husky": "0.14.3",
-    "lerna": "2.0.0",
-    "lint-staged": "4.0.2",
+    "lerna": "2.1.0",
+    "lint-staged": "4.0.4",
     "nodemon": "1.11.0",
     "prettier": "1.5.3"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --print-width=100 --jsx-bracket-same-line=true --write",
-      "git add"
-    ]
+    "*.js": ["prettier --print-width=100 --jsx-bracket-same-line=true --write", "git add"]
   }
 }
