--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -3,35 +3,35 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "compression": "1.7.0",
+    "compression": "1.7.1",
     "cookie-parser": "1.4.3",
     "isomorphic-fetch": "2.2.1",
     "lodash.debounce": "4.0.8",
-    "next": "3.0.6",
-    "polished": "1.5.0",
-    "prop-types": "15.5.10",
+    "next": "3.2.2",
+    "polished": "1.7.0",
+    "prop-types": "15.6.0",
     "query-string": "5.0.0",
     "react": "15.6.1",
-    "react-apollo": "1.4.15",
+    "react-apollo": "1.4.16",
     "react-dom": "15.6.1",
     "react-google-login": "2.9.3",
     "react-icons": "2.2.5",
     "react-transition-group": "1.2.0",
     "react-visibility-sensor": "3.10.1",
-    "recompose": "0.25.0",
-    "styled-components": "2.1.2"
+    "recompose": "0.25.1",
+    "styled-components": "2.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-info": "3.2.7",
-    "@storybook/react": "3.2.8",
-    "babel-eslint": "7.2.3",
-    "babel-plugin-styled-components": "1.1.7",
-    "eslint": "4.5.0",
-    "eslint-config-react-app": "2.0.0",
-    "eslint-plugin-flowtype": "2.35.0",
+    "@storybook/addon-info": "3.2.11",
+    "@storybook/react": "3.2.11",
+    "babel-eslint": "8.0.1",
+    "babel-plugin-styled-components": "1.2.0",
+    "eslint": "4.7.2",
+    "eslint-config-react-app": "2.0.1",
+    "eslint-plugin-flowtype": "2.36.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.3.0",
+    "eslint-plugin-react": "7.4.0",
     "pkg": "4.2.4"
   },
   "scripts": {
@@ -39,19 +39,14 @@
     "build-storybook": "build-storybook",
     "dev": "node server.js",
     "build": "next build",
-    "clean": "rm -fr .next dist/**",
+    "clean": "rm -fr .next .dist/**",
     "prestart": "npm run build",
     "start": "NODE_ENV=production node server.js",
     "predist": "npm run build",
-    "dist": "pkg index.js -t node8-macos-x64 -o dist/nomnom-app"
+    "dist": "pkg index.js -t node8-macos-x64 -o .dist/nomnom-app"
   },
   "pkg": {
-    "assets": [
-      ".next",
-      "pages"
-    ],
-    "scripts": [
-      ".next/dist/**/*.js"
-    ]
+    "assets": [".next", "pages"],
+    "scripts": [".next/dist/**/*.js"]
   }
 }
