--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -7,32 +7,32 @@
     "cookie-parser": "1.4.3",
     "isomorphic-fetch": "2.2.1",
     "lodash.debounce": "4.0.8",
-    "next": "3.2.2",
-    "polished": "1.7.0",
+    "next": "4.0.0",
+    "polished": "1.8.0",
     "prop-types": "15.6.0",
     "query-string": "5.0.0",
-    "react": "15.6.1",
+    "react": "16.0.0",
     "react-apollo": "1.4.16",
-    "react-dom": "15.6.1",
-    "react-google-login": "2.9.3",
-    "react-icons": "2.2.5",
+    "react-dom": "16.0.0",
+    "react-google-login": "2.11.3",
+    "react-icons": "2.2.7",
     "react-transition-group": "1.2.0",
-    "react-visibility-sensor": "3.10.1",
-    "recompose": "0.25.1",
-    "styled-components": "2.2.0"
+    "react-visibility-sensor": "3.11.0",
+    "recompose": "0.26.0",
+    "styled-components": "2.2.1"
   },
   "devDependencies": {
     "@storybook/addon-info": "3.2.11",
     "@storybook/react": "3.2.11",
     "babel-eslint": "8.0.1",
-    "babel-plugin-styled-components": "1.2.0",
+    "babel-plugin-styled-components": "1.2.1",
     "eslint": "4.7.2",
     "eslint-config-react-app": "2.0.1",
     "eslint-plugin-flowtype": "2.36.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
-    "pkg": "4.2.4"
+    "pkg": "4.2.5"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -46,7 +46,12 @@
     "dist": "pkg index.js -t node8-macos-x64 -o .dist/nomnom-app"
   },
   "pkg": {
-    "assets": [".next", "pages"],
-    "scripts": [".next/dist/**/*.js"]
+    "assets": [
+      ".next",
+      "pages"
+    ],
+    "scripts": [
+      ".next/dist/**/*.js"
+    ]
   }
 }
