--- a/packages/nomnom-app/.babelrc
+++ b/packages/nomnom-app/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]]
+  "plugins": [
+    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false }],
+    "transform-inline-environment-variables"
+  ]
 }
