--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -22,10 +22,12 @@
     "styled-components": "2.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-info": "3.2.11",
-    "@storybook/react": "3.2.11",
+    "@storybook/addon-info": "3.2.12",
+    "@storybook/react": "3.2.12",
     "babel-eslint": "8.0.1",
     "babel-plugin-styled-components": "1.2.1",
+    "babel-plugin-transform-inline-environment-variables": "0.2.0",
+    "dotenv": "4.0.0",
     "eslint": "4.7.2",
     "eslint-config-react-app": "2.0.1",
     "eslint-plugin-flowtype": "2.36.0",
@@ -37,7 +39,7 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "dev": "node server.js",
+    "dev": "node -r dotenv/config server.js",
     "build": "next build",
     "clean": "rm -fr .next .dist/**",
     "prestart": "npm run build",
