--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "prettier": "1.7.3"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --print-width=100 --jsx-bracket-same-line=true --write",
+    "*.{js,json,gql}": [
+      "prettier --write",
       "git add"
     ]
   }
