--- a/packages/nomnom-app/static/manifest.json
+++ b/packages/nomnom-app/static/manifest.json
@@ -1,11 +1,13 @@
 {
   "short_name": "NomNom",
   "name": "NomNom",
-  "icons": [{
-    "src": "favicon.ico",
-    "sizes": "192x192",
-    "type": "image/png"
-  }],
+  "icons": [
+    {
+      "src": "favicon.ico",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
   "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#3f51b5",
