--- a/packages/nomnom-server-api/package.json
+++ b/packages/nomnom-server-api/package.json
@@ -12,21 +12,21 @@
   "author": "Vincent Lemeunier",
   "license": "ISC",
   "dependencies": {
-    "bluebird": "3.5.0",
-    "body-parser": "1.18.2",
+    "apollo-server-express": "1.3.6",
+    "bluebird": "3.5.1",
+    "body-parser": "1.18.3",
     "cors": "2.8.4",
-    "dataloader": "1.3.0",
-    "dotenv": "4.0.0",
-    "express": "4.16.1",
-    "googleapis": "22.2.0",
-    "graphql": "0.11.6",
-    "graphql-server-express": "1.1.2",
-    "graphql-tools": "1.2.3",
+    "dataloader": "1.4.0",
+    "dotenv": "5.0.1",
+    "express": "4.16.3",
+    "googleapis": "31.0.2",
+    "graphql": "0.13.2",
+    "graphql-tools": "3.0.2",
     "morgan": "1.9.0",
     "nomnom-server-core": "1.0.0"
   },
   "devDependencies": {
-    "nodemon": "1.12.1",
-    "pkg": "4.2.4"
+    "nodemon": "1.17.5",
+    "pkg": "4.3.1"
   }
 }
