--- a/packages/nomnom-app/.babelrc
+++ b/packages/nomnom-app/.babelrc
@@ -1,7 +1,4 @@
 {
   "presets": ["next/babel"],
-  "plugins": [
-    ["styled-components", { "ssr": true, "displayName": true, "preprocess": false }],
-    "transform-inline-environment-variables"
-  ]
+  "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]]
 }
