--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -3,18 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "0.1.6",
+    "apollo-link-context": "1.0.8",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
-    "isomorphic-fetch": "2.2.1",
+    "graphql-tag": "2.9.2",
+    "isomorphic-unfetch": "2.0.0",
     "lodash.debounce": "4.0.8",
-    "next": "4.0.0",
+    "next": "6.0.3",
     "polished": "1.9.2",
     "prop-types": "15.6.1",
     "query-string": "6.1.0",
     "react": "16.4.0",
-    "react-apollo": "1.4.16",
+    "react-apollo": "2.1.4",
     "react-dom": "16.4.0",
-    "react-google-login": "2.11.3",
+    "react-google-login": "3.2.1",
     "react-icons": "2.2.7",
     "react-transition-group": "1.2.0",
     "react-visibility-sensor": "3.11.0",
@@ -22,18 +25,17 @@
     "styled-components": "2.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-info": "3.2.12",
-    "@storybook/react": "3.2.12",
-    "babel-eslint": "8.0.1",
-    "babel-plugin-styled-components": "1.2.1",
-    "babel-plugin-transform-inline-environment-variables": "0.2.0",
-    "dotenv": "4.0.0",
-    "eslint": "4.7.2",
-    "eslint-config-react-app": "2.0.1",
-    "eslint-plugin-flowtype": "2.36.0",
-    "eslint-plugin-import": "2.7.0",
+    "@storybook/addon-info": "3.4.5",
+    "@storybook/react": "3.4.5",
+    "babel-eslint": "8.2.3",
+    "babel-plugin-styled-components": "1.5.1",
+    "dotenv": "5.0.1",
+    "eslint": "4.19.1",
+    "eslint-config-react-app": "2.1.0",
+    "eslint-plugin-flowtype": "2.47.1",
+    "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.4.0",
+    "eslint-plugin-react": "7.8.2",
     "pkg": "4.3.1"
   },
   "scripts": {
