Preparing for dokku deployment

--- a/packages/nomnom-server-api/.env.example
+++ b/packages/nomnom-server-api/.env.example
@@ -1,10 +1,6 @@
-API_PORT=4000
+PORT=4000
 
-PG_USER=postgres
-PG_DATABASE=nomnom
-PG_PASSWORD=
-PG_HOST=127.0.0.1
-PG_PORT=5432
+DATABASE_URL=postgresql://dbuser:secretpassword@database.server.com:3211/mydb
 
 # For OAuth
 GOOGLE_CLIENT_ID=
