--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -2,6 +2,9 @@
   "name": "nomnom-app",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": "~10.1.0"
+  },
   "dependencies": {
     "apollo-boost": "0.1.6",
     "apollo-link-context": "1.0.8",
