--- a/packages/nomnom-server-api/package.json
+++ b/packages/nomnom-server-api/package.json
@@ -11,6 +11,9 @@
   },
   "author": "Vincent Lemeunier",
   "license": "ISC",
+  "engines": {
+    "node": "~10.1.0"
+  },
   "dependencies": {
     "apollo-server-express": "1.3.6",
     "bluebird": "3.5.1",
