--- a/packages/nomnom-server-core/package.json
+++ b/packages/nomnom-server-core/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "private": true,
   "license": "MIT",
+  "engines": {
+    "node": "~10.1.0"
+  },
   "dependencies": {
     "jsonwebtoken": "8.2.1",
     "node-uuid": "1.4.8",
