Add yarn version

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "packages/*"
   ],
   "engines": {
-    "node": "~10.1.0"
+    "node": "~10.1.0",
+    "yarn": "1.7"
   },
   "scripts": {
     "format": "prettier --print-width=100 --write --jsx-bracket-same-line=true 'packages/*/*.js' 'packages/*/!(node_modules)/**/*.js'",
