--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "~10.1.0"
+    "node": "~10.1.0",
+    "yarn": "1.7"
   },
   "dependencies": {
     "apollo-boost": "0.1.6",
