--- a/packages/nomnom-server-core/package.json
+++ b/packages/nomnom-server-core/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": "~10.1.0"
+    "node": "~10.1.0",
+    "yarn": "1.7"
   },
   "dependencies": {
     "jsonwebtoken": "8.2.1",
