--- a/packages/nomnom-server-readability/package.json
+++ b/packages/nomnom-server-readability/package.json
@@ -11,7 +11,8 @@
   "author": "Vincent Lemeunier",
   "license": "MIT",
   "engines": {
-    "node": "~10.1.0"
+    "node": "~10.1.0",
+    "yarn": "1.7"
   },
   "dependencies": {
     "bluebird": "3.5.1",
