--- a/packages/nomnom-server-jobs/package.json
+++ b/packages/nomnom-server-jobs/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "private": true,
   "engines": {
-    "node": "~10.1.0",
+    "node": "^10",
     "yarn": "1.7"
   },
   "dependencies": {
