--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "~10.1.0",
+    "node": "^10",
     "yarn": "1.7"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "apollo-link-context": "1.0.8",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
+    "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "isomorphic-unfetch": "2.0.0",
     "lodash.debounce": "4.0.8",
