--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -11,6 +11,7 @@
     "apollo-link-context": "1.0.8",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
+    "express": "4.16.3",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
     "isomorphic-unfetch": "2.0.0",
