--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -28,7 +28,8 @@
     "react-transition-group": "1.2.0",
     "react-visibility-sensor": "3.11.0",
     "recompose": "0.27.1",
-    "styled-components": "2.2.1"
+    "styled-components": "2.2.1",
+    "webpack": "3.10.0"
   },
   "devDependencies": {
     "@storybook/addon-info": "3.4.5",
