--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "apollo-boost": "0.1.6",
     "apollo-link-context": "1.0.8",
+    "babel-plugin-styled-components": "1.5.1",
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
+    "dotenv": "5.0.1",
     "express": "4.16.3",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
@@ -35,15 +37,12 @@
     "@storybook/addon-info": "3.4.5",
     "@storybook/react": "3.4.5",
     "babel-eslint": "8.2.3",
-    "babel-plugin-styled-components": "1.5.1",
-    "dotenv": "5.0.1",
     "eslint": "4.19.1",
     "eslint-config-react-app": "2.1.0",
     "eslint-plugin-flowtype": "2.47.1",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.8.2",
-    "pkg": "4.3.1"
+    "eslint-plugin-react": "7.8.2"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
