--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "start": "PORT=4001 nodemon -r dotenv/config --watch . index.js",
+    "migrate": "db-migrate",
     "clean": "rm -fr build/"
   },
   "author": "Vincent Lemeunier",
@@ -23,6 +24,8 @@
     "cors": "2.8.4",
     "dataloader": "1.4.0",
     "date-fns": "1.29.0",
+    "db-migrate": "0.11.1",
+    "db-migrate-pg": "0.4.0",
     "dotenv": "5.0.1",
     "express": "4.16.3",
     "feedparser": "2.2.9",
