--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "PORT=4001 nodemon -r dotenv/config --watch . index.js",
     "migrate": "db-migrate",
+    "readability": "node -r dotenv/config core/readability/cli.js",
     "clean": "rm -fr build/"
   },
   "author": "Vincent Lemeunier",
