--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -20,6 +20,7 @@
     "apollo-server-express": "1.3.6",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
+    "bull": "3.4.2",
     "cheerio": "1.0.0-rc.2",
     "cookie": "0.3.1",
     "cors": "2.8.4",
