--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -43,7 +43,7 @@
     "node-uuid": "1.4.8",
     "pg": "7.4.3",
     "pump": "3.0.0",
-    "winston": "2.4.2"
+    "winston": "3.0.0-rc5"
   },
   "devDependencies": {
     "nodemon": "1.17.5"
