--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -18,6 +18,7 @@
     "graphql-tag": "2.9.2",
     "isomorphic-unfetch": "2.0.0",
     "lodash.debounce": "4.0.8",
+    "lodash.uniqby": "4.7.0",
     "next": "6.0.3",
     "polished": "1.9.2",
     "prop-types": "15.6.1",
