--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -10,7 +10,6 @@
     "apollo-boost": "0.1.6",
     "apollo-link-context": "1.0.8",
     "babel-plugin-styled-components": "1.5.1",
-    "compression": "1.7.2",
     "cookie-parser": "1.4.3",
     "dotenv": "5.0.1",
     "express": "4.16.3",
@@ -19,6 +18,7 @@
     "isomorphic-unfetch": "2.0.0",
     "lodash.debounce": "4.0.8",
     "lodash.uniqby": "4.7.0",
+    "morgan": "1.9.0",
     "next": "6.0.3",
     "polished": "1.9.2",
     "prop-types": "15.6.1",
