Added jobs debug interface

--- a/packages/nomnom-api/.env.example
+++ b/packages/nomnom-api/.env.example
@@ -2,6 +2,12 @@ PORT=4000
 
 DATABASE_URL=postgresql://dbuser:secretpassword@database.server.com:3211/mydb
 REDIS_URL=redis://127.0.0.1:6379
+IMG_BASE_URL=http://localhost:5000/
+DATA_PATH=
+
+# Arena
+ARENA_USERNAME=
+ARENA_PASSWORD=
 
 # For OAuth
 GOOGLE_CLIENT_ID=
@@ -14,4 +20,3 @@ JWT_ALGORITHM=HS256
 # For Readability
 YOUTUBE_API_KEY=
 
-DATA_PATH=
