--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -18,9 +18,11 @@
   },
   "dependencies": {
     "apollo-server-express": "1.3.6",
+    "basic-auth": "2.0.0",
     "bluebird": "3.5.1",
     "body-parser": "1.18.3",
     "bull": "3.4.2",
+    "bull-arena": "2.4.3",
     "cheerio": "1.0.0-rc.2",
     "cookie": "0.3.1",
     "cors": "2.8.4",
