--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -11,6 +11,7 @@
     "apollo-link-context": "1.0.8",
     "babel-plugin-styled-components": "1.5.1",
     "cookie-parser": "1.4.3",
+    "date-fns": "1.29.0",
     "dotenv": "5.0.1",
     "express": "4.16.3",
     "graphql": "0.13.2",
