--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon -r dotenv/config --watch . index.js",
     "migrate": "db-migrate",
     "readability": "node -r dotenv/config core/readability/cli.js",
-    "clean": "rm -fr build/"
+    "test": "jest"
   },
   "author": "Vincent Lemeunier",
   "license": "ISC",
@@ -38,7 +38,9 @@
     "got": "8.3.1",
     "graphql": "0.13.2",
     "graphql-tools": "3.0.2",
+    "jest": "23.1.0",
     "jsonwebtoken": "8.2.1",
+    "lodash": "4.17.10",
     "mime-types": "2.1.18",
     "moment": "2.22.1",
     "morgan": "1.9.0",
