--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -11,6 +11,7 @@
     "apollo-link-context": "1.0.8",
     "babel-plugin-styled-components": "1.5.1",
     "cookie-parser": "1.4.3",
+    "cross-env": "5.1.6",
     "date-fns": "1.29.0",
     "dotenv": "6.0.0",
     "express": "4.16.3",
@@ -46,7 +47,8 @@
     "eslint-plugin-flowtype": "2.47.1",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.8.2"
+    "eslint-plugin-react": "7.8.2",
+    "webpack-bundle-analyzer": "2.13.1"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -54,6 +56,7 @@
     "clean": "rm -fr .next .dist/**",
     "dev": "node -r dotenv/config index.js",
     "prestart": "next build",
-    "start": "node index.js"
+    "start": "node index.js",
+    "analyze": "cross-env ANALYZE=1 next build"
   }
 }
