--- a/packages/nomnom-app/.babelrc
+++ b/packages/nomnom-app/.babelrc
@@ -3,7 +3,7 @@
   "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]],
   "env": {
     "production": {
-      "plugins": [["styled-components", { "ssr": true, "displayName": false }]]
+      "plugins": [["styled-components", { "ssr": true, "displayName": false }], "polished"]
     }
   }
 }
