--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -37,7 +37,8 @@
     "react-visibility-sensor": "3.11.0",
     "recompose": "0.27.1",
     "styled-components": "3.3.2",
-    "webpack": "3.10.0"
+    "webpack": "3.10.0",
+    "webpack-bundle-analyzer": "2.13.1"
   },
   "devDependencies": {
     "@storybook/addon-info": "3.4.6",
@@ -48,8 +49,7 @@
     "eslint-plugin-flowtype": "2.47.1",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.8.2",
-    "webpack-bundle-analyzer": "2.13.1"
+    "eslint-plugin-react": "7.8.2"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
