--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -18,6 +18,7 @@
     "express": "4.16.3",
     "graphql": "0.13.2",
     "graphql-tag": "2.9.2",
+    "helmet": "3.12.1",
     "isomorphic-unfetch": "2.0.0",
     "lodash.debounce": "4.0.8",
     "lodash.uniqby": "4.7.0",
