--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -38,6 +38,7 @@
     "react-visibility-sensor": "3.11.0",
     "recompose": "0.27.1",
     "styled-components": "3.3.2",
+    "uuid": "3.2.1",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.13.1"
   },
