--- a/packages/nomnom-extension-2/.babelrc
+++ b/packages/nomnom-extension-2/.babelrc
@@ -1,4 +1,12 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript", "@babel/preset-react"],
-  "plugins": ["@babel/proposal-class-properties", "@babel/proposal-object-rest-spread"]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-typescript",
+    ["@babel/preset-react", { "pragma": "h" }]
+  ],
+  "plugins": [
+    "@babel/proposal-class-properties",
+    "@babel/proposal-object-rest-spread",
+    ["babel-plugin-jsx-pragmatic", { "module": "preact", "import": "h", "export": "h" }]
+  ]
 }
