--- a/packages/nomnom-extension-2/package.json
+++ b/packages/nomnom-extension-2/package.json
@@ -15,8 +15,15 @@
     "@babel/preset-typescript": "7.1.0",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "babel-plugin-jsx-pragmatic": "1.0.2",
     "clean-webpack-plugin": "1.0.0",
+    "css-loader": "2.0.2",
     "html-webpack-plugin": "3.2.0",
+    "mini-css-extract-plugin": "0.5.0",
+    "postcss": "7.0.7",
+    "postcss-loader": "3.0.0",
+    "style-loader": "0.23.1",
+    "tailwindcss": "0.7.3",
     "webpack": "4.28.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.14"
@@ -24,7 +31,6 @@
   "dependencies": {
     "@babel/preset-env": "7.2.3",
     "babel-loader": "8.0.4",
-    "react": "16.7.0",
-    "react-dom": "16.7.0"
+    "preact": "8.4.2"
   }
 }
