--- a/packages/nomnom-extension-2/package.json
+++ b/packages/nomnom-extension-2/package.json
@@ -18,12 +18,16 @@
     "babel-plugin-jsx-pragmatic": "1.0.2",
     "clean-webpack-plugin": "1.0.0",
     "css-loader": "2.0.2",
+    "glob": "7.1.3",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss": "7.0.7",
     "postcss-loader": "3.0.0",
+    "purgecss-webpack-plugin": "1.4.0",
     "style-loader": "0.23.1",
     "tailwindcss": "0.7.3",
+    "uglifyjs-webpack-plugin": "2.1.0",
     "webpack": "4.28.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.14"
