--- a/packages/nomnom-extension-2/package.json
+++ b/packages/nomnom-extension-2/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "yarn type-check && webpack",
+    "type-check": "tsc --noEmit -p .",
     "dev": "webpack-dev-server --mode=development --open"
   },
   "devDependencies": {
     "@babel/core": "7.2.2",
     "@babel/plugin-proposal-class-properties": "7.2.3",
     "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.1.0",
+    "babel-loader": "8.0.4",
     "babel-plugin-jsx-pragmatic": "1.0.2",
     "clean-webpack-plugin": "1.0.0",
     "css-loader": "2.0.2",
@@ -25,14 +28,13 @@
     "purgecss-webpack-plugin": "1.4.0",
     "style-loader": "0.23.1",
     "tailwindcss": "0.7.3",
+    "typescript": "3.2.2",
     "uglifyjs-webpack-plugin": "2.1.0",
     "webpack": "4.28.2",
     "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
-    "@babel/preset-env": "7.2.3",
-    "babel-loader": "8.0.4",
     "preact": "8.4.2"
   }
 }
