--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -4,54 +4,66 @@
   "private": true,
   "engines": {
     "node": "^10",
-    "yarn": "1.7"
+    "yarn": "^1.17"
   },
   "dependencies": {
-    "apollo-boost": "0.1.7",
-    "apollo-link-context": "1.0.8",
+    "@apollo/react-common": "3.0.1",
+    "@apollo/react-hoc": "3.0.1",
+    "@apollo/react-hooks": "3.0.1",
+    "@apollo/react-ssr": "3.0.1",
+    "@emotion/core": "10.0.16",
+    "@emotion/styled": "10.0.15",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
+    "apollo-link-context": "1.0.18",
+    "apollo-link-http": "1.5.15",
+    "babel-plugin-emotion": "10.0.16",
     "babel-plugin-polished": "1.1.0",
-    "babel-plugin-styled-components": "1.5.1",
-    "cookie-parser": "1.4.3",
-    "cross-env": "5.1.6",
-    "date-fns": "1.29.0",
-    "dotenv": "6.0.0",
-    "express": "4.16.3",
-    "graphql": "0.13.2",
-    "graphql-tag": "2.9.2",
-    "helmet": "3.12.1",
-    "isomorphic-unfetch": "2.0.0",
+    "cookie-parser": "1.4.4",
+    "cross-env": "5.2.0",
+    "date-fns": "1.30.1",
+    "dotenv": "8.1.0",
+    "emotion-theming": "10.0.14",
+    "express": "4.17.1",
+    "graphql": "14.4.2",
+    "graphql-tag": "2.10.1",
+    "helmet": "3.20.0",
+    "isomorphic-unfetch": "3.0.0",
     "lodash.debounce": "4.0.8",
     "lodash.uniqby": "4.7.0",
-    "morgan": "1.9.0",
-    "mousetrap": "1.6.2",
-    "next": "6.0.3",
+    "morgan": "1.9.1",
+    "mousetrap": "1.6.3",
+    "next": "9.0.4",
     "numeral": "2.0.6",
-    "polished": "1.9.2",
-    "prop-types": "15.6.1",
-    "query-string": "6.1.0",
-    "react": "16.4.0",
-    "react-apollo": "2.1.4",
-    "react-dom": "16.4.0",
+    "polished": "3.4.1",
+    "prop-types": "15.7.2",
+    "query-string": "6.8.2",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-google-login": "3.2.1",
     "react-icons": "2.2.7",
     "react-transition-group": "2.3.1",
     "react-visibility-sensor": "3.11.0",
     "recompose": "0.27.1",
-    "styled-components": "3.3.2",
-    "uuid": "3.2.1",
+    "uuid": "3.3.3",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "2.13.1"
+    "webpack-bundle-analyzer": "3.4.1"
   },
   "devDependencies": {
     "@storybook/addon-info": "3.4.6",
     "@storybook/react": "3.4.6",
+    "@types/cookie": "0.3.3",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "apollo-codegen": "0.20.2",
     "babel-eslint": "8.2.3",
     "eslint": "4.19.1",
     "eslint-config-react-app": "2.1.0",
     "eslint-plugin-flowtype": "2.47.1",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.8.2"
+    "eslint-plugin-react": "7.8.2",
+    "typescript": "3.5.3"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
@@ -60,6 +72,7 @@
     "dev": "node -r dotenv/config index.js",
     "prestart": "next build",
     "start": "node index.js",
-    "analyze": "cross-env ANALYZE=1 next build"
+    "analyze": "cross-env ANALYZE=1 next build",
+    "apollo-types": "apollo-codegen generate './{components,graphql,pages,services,toolkit}/**/*.{js,ts,tsx}' --add-typename --tag-name gql --target typescript --output apollo-types.d.ts"
   }
 }
