--- a/package.json
+++ b/package.json
@@ -2,27 +2,25 @@
   "name": "nomnom",
   "version": "1.0.0",
   "private": true,
+  "workspaces": ["packages/*"],
   "engines": {
     "node": "^10",
-    "yarn": "1.7"
+    "yarn": "1.17.3"
   },
   "scripts": {
-    "format": "prettier --print-width=100 --write --jsx-bracket-same-line=true 'packages/*/*.js' 'packages/*/!(node_modules)/**/*.js'",
     "precommit": "lint-staged",
-    "clean": "lerna clean",
-    "bootstrap": "lerna bootstrap"
+    "clean": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' +"
   },
   "devDependencies": {
     "babel-eslint": "8.2.3",
     "eslint": "4.19.1",
-    "husky": "0.14.3",
-    "lerna": "2.11.0",
-    "lint-staged": "7.1.2",
-    "prettier": "1.12.1"
+    "husky": "3.0.4",
+    "lint-staged": "9.2.3",
+    "prettier": "1.18.2"
   },
   "lint-staged": {
-    "*.{js,json,gql}": [
-      "yarn prettier --print-width=100 --jsx-bracket-same-line=true --write",
+    "*.{js,json,gql,md}": [
+      "prettier --write",
       "git add"
     ]
   },
