--- a/packages/nomnom-api/package.json
+++ b/packages/nomnom-api/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "engines": {
     "node": "^10",
-    "yarn": "1.7"
+    "yarn": "^1.17"
   },
   "dependencies": {
     "apollo-server-express": "1.3.6",
