--- a/packages/nomnom-app/.babelrc
+++ b/packages/nomnom-app/.babelrc
@@ -1,9 +1,9 @@
 {
   "presets": ["next/babel"],
-  "plugins": [["styled-components", { "ssr": true, "displayName": true, "preprocess": false }]],
+  "plugins": ["emotion"],
   "env": {
     "production": {
-      "plugins": [["styled-components", { "ssr": true, "displayName": false }], "polished"]
+      "plugins": ["polished"]
     }
   }
 }
