--- a/packages/nomnom-img/package.json
+++ b/packages/nomnom-img/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "engines": {
     "node": "^10",
-    "yarn": "1.7"
+    "yarn": "^1.17"
   },
   "devDependencies": {
     "dotenv": "5.0.1",
