--- a/packages/nomnom-app/package.json
+++ b/packages/nomnom-app/package.json
@@ -13,6 +13,7 @@
     "@apollo/react-ssr": "3.0.1",
     "@emotion/core": "10.0.16",
     "@emotion/styled": "10.0.15",
+    "@types/lodash": "4.14.137",
     "apollo-cache-inmemory": "1.6.3",
     "apollo-client": "2.6.4",
     "apollo-link-context": "1.0.18",
@@ -29,8 +30,7 @@
     "graphql-tag": "2.10.1",
     "helmet": "3.20.0",
     "isomorphic-unfetch": "3.0.0",
-    "lodash.debounce": "4.0.8",
-    "lodash.uniqby": "4.7.0",
+    "lodash": "4.17.15",
     "morgan": "1.9.1",
     "mousetrap": "1.6.3",
     "next": "9.0.4",
