--- a/packages/nomnom-api/.env.example
+++ b/packages/nomnom-api/.env.example
@@ -1,6 +1,6 @@
 PORT=4000
 
-DATABASE_URL=postgresql://dbuser:secretpassword@database.server.com:3211/mydb
+DATABASE_URI=postgresql://dbuser:secretpassword@database.server.com:3211/mydb
 REDIS_URL=redis://127.0.0.1:6379
 IMG_BASE_URL=http://localhost:5000/
 DATA_PATH=
